--- a/WeldingPassportsApp/Infrastructure/Infrastructure.csproj
+++ b/WeldingPassportsApp/Infrastructure/Infrastructure.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20220122122107_Initial_Migration.cs" />
+    <Compile Remove="Migrations\20220122122107_Initial_Migration.Designer.cs" />
+    <Compile Remove="Migrations\20230125162126_Initial.cs" />
+    <Compile Remove="Migrations\20230125162126_Initial.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.20" />
