--- a/WeldingPassportsApp/WeldingPassportsApp/WeldingPassportsApp.csproj
+++ b/WeldingPassportsApp/WeldingPassportsApp/WeldingPassportsApp.csproj
@@ -20,5 +20,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.20" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\js\Examinations\" />
+  </ItemGroup>
   
 </Project>
