Azure Key Vault

--- a/WeldingPassportsApp/WeldingPassportsApp/appsettings.json
+++ b/WeldingPassportsApp/WeldingPassportsApp/appsettings.json
@@ -8,5 +8,6 @@
   },
   "AllowedHosts": "*",
   "SendGridEmailFrom": "it@synergrid.be",
-  "SendGridNameFrom": "pe.synergrid.be"
+  "SendGridNameFrom": "pe.synergrid.be",
+  "KeyVaultName": "WeldingPassportsApp"
 }
