Sendgrid + new admin

--- a/WeldingPassportsApp/WeldingPassportsApp/appsettings.Development.json
+++ b/WeldingPassportsApp/WeldingPassportsApp/appsettings.Development.json
@@ -9,5 +9,5 @@
   "ConnectionStrings": {
     "WeldingPassportsDBConnection": "server=(localdb)\\MSSQLLocalDB;database=WeldingPassportsDB;Trusted_Connection=true"
   },
-  "SendGridEmailFrom": "it.synergrid@outlook.com"
+  "SendGridEmailFrom": "it.pepassportsapp@outlook.com"
 }
