--- a/WeldingPassportsApp/WeldingPassportsApp/appsettings.json
+++ b/WeldingPassportsApp/WeldingPassportsApp/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "SendGridEmailFrom": "it@synergrid.be",
-  "SendGridNameFrom": "pe.synergrid.be",
-  "KeyVaultName": "WeldingPassportsApp"
+  "SendGridEmailFrom": "it.pepassportsapp@outlook.com",
+  "SendGridNameFrom": "it.pepassportsapp@outlook.com",
+  "KeyVaultName": "PEPassportsApp"
 }
