Queries ProcessID + PEPassports

--- a/WeldingPassportsApp/WeldingPassportsApp/appsettings.json
+++ b/WeldingPassportsApp/WeldingPassportsApp/appsettings.json
@@ -9,5 +9,5 @@
   "AllowedHosts": "*",
   "SendGridEmailFrom": "it.pepassportsapp@outlook.com",
   "SendGridNameFrom": "it.pepassportsapp@outlook.com",
-  "KeyVaultName": "PEPassportsApp"
+  "KeyVaultName": "WeldingPassportsApp"
 }
