--- a/WeldingPassportsApp/WeldingPassportsApp/Properties/serviceDependencies.WeldingPassportsApp - Web Deploy.json
+++ b/WeldingPassportsApp/WeldingPassportsApp/Properties/serviceDependencies.WeldingPassportsApp - Web Deploy.json
@@ -1,11 +1,16 @@
 {
   "dependencies": {
-    "mssql1": {
+    "secrets1": {
       "secretStore": "AzureAppSettings",
+      "resourceId": "/subscriptions/[parameters('subscriptionId')]/resourceGroups/[parameters('resourceGroupName')]/providers/Microsoft.KeyVault/vaults/WeldingPassportsApp",
+      "type": "secrets.keyVault",
+      "connectionId": "VaultUri"
+    },
+    "mssql1": {
+      "secretStore": "AzureKeyVault",
       "resourceId": "/subscriptions/[parameters('subscriptionId')]/resourceGroups/[parameters('resourceGroupName')]/providers/Microsoft.Sql/servers/mssqlazuredb/databases/WeldingPassportsDB",
       "type": "mssql.azure",
-      "connectionId": "WeldingPassportsDBConnection",
-      "dynamicId": null
+      "connectionId": "WeldingPassportsDBConnection"
     }
   }
 }
