Bug fixes in frontend

--- a/WeldingPassportsApp/WeldingPassportsApp/appsettings.Development.json
+++ b/WeldingPassportsApp/WeldingPassportsApp/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "WeldingPassportsDBConnection": "server=(localdb)\\MSSQLLocalDB;database=WeldingPassportsDB;Trusted_Connection=true"
+    "WeldingPassportsDBConnection": "server=(localdb)\\MSSQLLocalDB;database=WeldingPassportsDB;Trusted_Connection=true;MultipleActiveResultSets=True"
   },
   "SendGridEmailFrom": "it.pepassportsapp@outlook.com"
 }
