Fix Sendgrid for Azure
SendGridMailService use SendGridMailFrom
SendGridEmailFrom is not working on Azure

--- a/WeldingPassportsApp/WeldingPassportsApp/appsettings.json
+++ b/WeldingPassportsApp/WeldingPassportsApp/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "SendGridEmailFrom": "it.pepassportsapp@outlook.com",
-  "SendGridNameFrom": "it.pepassportsapp@outlook.com",
+  "SendGridMailFrom": "it.pepassportsapp@outlook.com",
+  "SendGridNameFrom":  "pepassportsapp",
   "KeyVaultName": "WeldingPassportsApp"
 }
